...
                        "Edit item"
                      } else {
                        "Create a new item"
                      })
            },
            modifier = modifier.testTag("topBar").fillMaxWidth(),
            navigationIcon = {
              IconButton(
                  modifier = modifier.testTag("navigationIcon"),
                  onClick = { navigationActions.goBack() }) {
                    Icon(
                        imageVector = Icons.AutoMirrored.Default.ArrowBack,
                        contentDescription = null)
                  }
            })
      },
      bottomBar = {
        BottomNavigationBar(
            modifier = Modifier.testTag("inventoryViewItemBottomBar"),
            selectedDestination = "Inventory",
            navigateToTopLevelDestination = { dest -> navigationActions.navigateTo(dest) })
      }) {
        val uis = itemViewModel.uiState.collectAsState()
        val i = uis.value.item
        var uiCategory by remember { mutableStateOf(i.category) }
        var uiName by remember { mutableStateOf(i.name) }
...
                        onValueChange = { input ->
                          // Filter out newline characters from the input string
                          val filteredInput = input.replace("\n", "")
                          uiName = filteredInput
                        },
                        label = { Text("Object name") },
                        modifier = modifier.testTag("name").fillMaxWidth(),
                        singleLine = true, // Ensure only one line is displayed
                        readOnly = false)

                    LabeledText(
                        modifier.testTag("idUser").fillMaxWidth(), "Owner", uiState.user.name)
                  }
...
              }
              Column(modifier.fillMaxWidth().padding(horizontal = 8.dp)) {
                OutlinedTextField(
                    value = uiDescription,
                    onValueChange = { it -> uiDescription = it },
                    label = { Text("Description") },
                    modifier = modifier.testTag("description").fillMaxWidth(),
                    minLines = 5,
                    readOnly = false)

                Spacer(modifier = modifier.height(8.dp))

                Row(modifier = modifier.fillMaxWidth()) {
                  Box(
                      modifier =
                          modifier.testTag("category").fillMaxWidth(.5f).padding(end = 8.dp)) {
                        val displayedCategory =
                            if (uiCategory.name == "") "Category" else uiCategory.name
                        val c = DropDown(displayedCategory, CategoryItems)

                        uiCategory = Category(uiCategory.id, c)
                      }
                  Box(modifier = modifier.testTag("visibility").fillMaxWidth()) {
                    uiVisibility = getVisibility(DropDown("Visibility", VisibilityItems))
                  }
                }

                OutlinedTextField(
                    value = uiQuantity.toString(),
                    onValueChange = { str ->
                      val longValue: Long? = str.toLongOrNull()
                      uiQuantity = longValue ?: 0L
                    },
                    keyboardOptions = KeyboardOptions(keyboardType = KeyboardType.Number),
                    label = { Text("Quantity") },
                    modifier = modifier.testTag("quantity").fillMaxWidth(),
                    readOnly = false)

                Spacer(modifier = modifier.height(8.dp))

                LocationPicker(
                    location = tempAddress,
...

                      navigationActions.goBack()
                    },
                    enabled = uiName.isNotBlank() && !isUploadingImage,
                    content = {
                      if (mode == "edit") {
                        Text("Save")
                      } else {
                        Text("Create")
                      }
                    },
                    modifier = modifier.fillMaxWidth().testTag("button").padding(top = 8.dp))
              }
            }
      }
...
