...
  TextField(
      value = location,
      singleLine = true,
      onValueChange = { onTextChanged(it) },
      label = { Text(text = "Location", color = MaterialTheme.colorScheme.onBackground) },
      modifier =
          Modifier.fillMaxWidth().testTag("addressField").onFocusChanged {
            focused = it.isFocused
            if (!focused) {
              onTextChanged(loc?.locationName ?: location)
            }
          },
      placeholder = { Text(text = "Enter an address") },
...
